force-app/main/default/objects/Product2/fields/Product_code__c.field-meta.xml
<CustomField>
    <fullName>Product_code__c</fullName>
    <label>일련번호</label>
    <length>255</length>
    <type>Text</type>
</CustomField>