force-app/main/default/objects/Product2/fields/Product_codentify__c.field-meta.xml
<CustomField>
    <fullName>Product_codentify__c</fullName>
    <label>제품코덴티파이</label>
    <length>255</length>
    <type>Text</type>
</CustomField>