force-app/main/default/objects/Product2/fields/Product_status__c.field-meta.xml
<CustomField>
    <fullName>Product_status__c</fullName>
    <label>상태구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>보관</fullName>
            </value>
            <value>
                <fullName>폐기대상</fullName>
            </value>
            <value>
                <fullName>L1대기</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>