force-app/main/default/objects/Product2/fields/SC__c.field-meta.xml
<CustomField>
    <fullName>SC__c</fullName>
    <label>SC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>